--- a/FSyncCli/appsettings.json
+++ b/FSyncCli/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": "Debug",
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "===> {Timestamp:HH:mm:ss.fff zzz} [{Level:w3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level:w3}] {Message:lj}{NewLine}{Exception}"
         }
       },
       {
@@ -13,9 +14,10 @@
         "Args": {
           "path": "c:\\!FsyncTest\\logs\\fSync.log",
           "rollingInterval": "Day",
-          "outputTemplate": "===> {Timestamp:HH:mm:ss.fff zzz} [{Level:w3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level:w3}] ({ThreadId}) {Message:lj}{NewLine}{Exception}"
         }
       }
-    ]
+    ],
+    "Enrich": [ "WithThreadId" ]
   }
 }
